# github-ops-manager

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  github-ops-manager  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
config_examples/: .gitkeep
github_ops_manager/: __init__.py  auth.py  cli.py  config.py
github_ops_manager/_legacy/: github_helper.py  github_sync.py
github_ops_manager/configuration/: __init__.py  cli.py  config.py  driver.py  env.py  exceptions.py  models.py  reconcile.py
github_ops_manager/github/: __init__.py  abc.py  adapter.py  client.py  issues.py  models.py  pull_requests.py  repositories.py
github_ops_manager/github/search/: __init__.py  user_discovery.py
github_ops_manager/migrate/: __init__.py  issues_to_metadata.py
github_ops_manager/processing/: __init__.py  exceptions.py  models.py  results.py  test_cases_processor.py  workflow_runner.py  yaml_processor.py
github_ops_manager/release_notes/: __init__.py  detector.py  extractor.py  generator.py  markdown.py  models.py
github_ops_manager/schemas/: __init__.py  default_issue.py  tac.py
github_ops_manager/synchronize/: __init__.py  driver.py  issues.py  issues_metadata.py  issues_yaml_migration.py  labels.py  pull_requests.py  pull_requests_metadata.py  results.py  test_requirements.py  tracking_issues.py  types.py  utils.py  workflow_runner.py
github_ops_manager/templates/: tac_issues_body.j2  tracking_issue.j2
github_ops_manager/utils/: __init__.py  attachments.py  config.py  constants.py  exceptions.py  github.py  helpers.py  logging.py  retry.py  tac.py  templates.py  truncation.py  typings.py  yaml.py
tests/: __init__.py
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep  __init__.py  conftest.py  test_cli.py  test_github_sync.py  test_process_issues_create_multiple_issues.py  test_process_issues_create_pr_for_existing_issue.py  test_process_issues_create_pr_for_issue.py  test_process_issues_create_pr_for_one_of_multiple_issues.py  test_process_issues_create_single_issue.py  test_process_issues_create_single_issue_with_template.py  test_process_issues_update_single_issue_body.py  test_process_issues_update_single_issue_body_of_multiple.py  test_process_issues_update_single_issue_labels.py  test_process_issues_update_single_issue_labels_of_multiple.py  utils.py
tests/unit/: .gitkeep  __init__.py  conftest.py  test_configuration_driver.py  test_configuration_reconcile.py  test_configuration_reconcile_reconcile_base_configuration.py  test_configuration_reconcile_reconcile_export_issues_configuration.py  test_configuration_reconcile_reconcile_process_issues_configuration.py  test_configuration_reconcile_validate_github_authentication_configuration.py  test_github_adapter.py  test_processing_test_cases_processor.py  test_processing_workflow_runner.py  test_processing_yaml_processor.py  test_synchronize_issues.py  test_synchronize_issues_yaml_migration.py  test_synchronize_pull_requests.py  test_synchronize_test_requirements.py  test_synchronize_utils.py  test_synchronize_workflow_runner.py  test_utils_github.py  test_utils_helpers.py  test_utils_truncation.py
